# Genetic-Algorithm

./: CMakeLists.txt  README.md  main.cpp
CGeneticAlgorithm/: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h
CIndividual/: CIndividual.cpp  CIndividual.h
CItems/: CItems.cpp  CItems.h
CProblem/: CProblem.cpp  CProblem.h  ProblemInstance.txt
CRandomNumberGenerator/: CRandomNumberGenerator.cpp  CRandomNumberGenerator.h
CSolution/: CSolution.cpp  CSolution.h
